--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="static/assets/css/main.css" />
+		<link rel="shortcut icon" href="{{ url_for('static', filename='alphabet.ico') }}">
 		<noscript><link rel="stylesheet" href="static/assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -32,8 +33,15 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Mohit T. Kumbhare</h1>
-									<p>Data Analyst</p>
+									<p><b>Data Analyst</b></p>
 									<p><i>"Be less than what you are so that you can become more"</i></p>
+									<ul>
+										<li>Python</li>
+										<li>Web Scrapping</li>
+										<li>Machine Learning</li>
+										<li>Deep Learning</li>
+										<li>Natural Language Processing</li>
+									</ul>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
@@ -54,7 +62,7 @@
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://github.com/Mohit-20/PythonWebScrap" class="image fit"><img src="static/p1.jpg" alt="">Web Scrapping Using Python</a>
 										</div>
-										<div class="col-4 col-6-medium col-12-small">
+										<!-- <div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="static/images/pic02.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
@@ -86,7 +94,7 @@
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-										</div>
+										</div> -->
 									</div>
 								</section>
 							</article>
