--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
+						<a href="#work" class="icon solid fa-folder"><span>Projects</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 						<a href="https://www.linkedin.com/in/mohit-kumbhare-3373b21b0/" class="icon brands fa-linkedin-in"><span>Linkedin</span></a>
 					</nav>
@@ -33,14 +33,14 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Mohit T. Kumbhare</h1>
-									<p><b>Data Analyst</b></p>
 									<p><i>"Be less than what you are so that you can become more"</i></p>
 									<ul>
 										<li>Python</li>
 										<li>Web Scrapping</li>
 										<li>Machine Learning</li>
 										<li>Deep Learning</li>
-										<li>Natural Language Processing</li>
+										<li>Flask</li>
+										<!-- <li>Natural Language Processing</li> -->
 									</ul>
 								</header>
 								<a href="#work" class="jumplink pic">
@@ -52,22 +52,20 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Work</h2>
+									<h2>Projects</h2>
 								</header>
-								<p>
-									It ain't much, but each project honest works
-								</p>
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/Mohit-20/PythonWebScrap" class="image fit"><img src="static/p1.jpg" alt="">Web Scrapping Using Python</a>
-										</div>
-										<!-- <div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="static/images/pic02.jpg" alt=""></a>
+											<a href="https://github.com/Mohit-20/PythonWebScrap" class="image fit"><img src="static/p1.jpg" height="160" alt="">Web Scrapping Using Python</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a href="https://github.com/Mohit-20/Machine-Learning" class="image fit"><img src="static/ml.jpeg" height='160'alt="">Machine Learning Project</a>
 										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="https://github.com/Mohit-20/Deep-Learning" class="image fit"><img src="static/dl.jpg" height="160" alt="">Deep Learning Project</a>
+										</div>
+										<!-- 
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
 										</div>
